--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,13 +2,32 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    color: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 body {
     background-color: #212121;
 
+}
+
+h1 {
+    color: white;
+}
+
+button {
+    display: flex;
+    justify-content: center;
+    margin: 3rem auto;
+    background-color: red;
+    border: 0.1rem solid yellow;
+    padding: 1rem;
+    border-radius: 2rem;
+}
+
+#difficoltà {
+    display: flex;
+    justify-content: center;
+    margin: auto;
 }
 
 #griglia {
